--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.lucsartes.intellijprojectidentifierplugin
-pluginName = intellij-project-identifier-plugin
+pluginName = Project Identifier
 pluginRepositoryUrl = https://github.com/Lucsartes/intellij-project-identifier-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
