--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.lucsartes.intellijprojectidentifierplugin</id>
-    <name>intellij-project-identifier-plugin</name>
+    <name>Project Identifier</name>
     <vendor>lucsartes</vendor>
 
     <depends>com.intellij.modules.platform</depends>
