--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginGroup = com.github.lucsartes.intellijprojectidentifierplugin
 pluginName = Project Identifier
 pluginRepositoryUrl = https://github.com/Lucsartes/intellij-project-identifier-plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.2-SNAPSHOT
+pluginVersion = 0.0.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 243
