--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -6,7 +6,7 @@
     <vendor email="lucsartes.xels@gmail.com">Lucsartes</vendor>
     <resource-bundle>messages.MyBundle</resource-bundle>
 
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.2</version>
 
     <depends>com.intellij.modules.platform</depends>
 
